--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<h2 class="title">Yamb Points Table</h2>
+<h2 class="title">Jamb</h2>
 
 <div class="grid-container" id="yambGrid"></div>
 
